Style - Search Results: Fix the styling on search results so that they are no longer hidden by the filters on desktop view

--- a/src/components/layout/SearchResults/SearchResults.module.css
+++ b/src/components/layout/SearchResults/SearchResults.module.css
@@ -24,6 +24,7 @@
   }
   @media (min-width: 768px) {
     height: calc(100vh - var(--header-height) - var(--filters-height));
+    top: calc(var(--header-height) + var(--filters-height));
   }
 }
 
